Cast void * to long before casting to char. Thanks to Brad Roberts <braddr@puremagic.com> for the patch. Bug #74078